--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "vannyy01",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "concurrently": "^3.6.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.7",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
