--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/react-redux": "^6.0.6",
     "typescript": "2.9.2"
   }
 }
