--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
     "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.5.8",
-    "@types/react": "^16.4.2",
+    "@types/react": "16.4.8",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
