--- a/client/package.json
+++ b/client/package.json
@@ -35,10 +35,10 @@
     "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.5.8",
-    "@types/react": "16.4.8",
+    "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
-    "typescript": "^2.9.2"
+    "typescript": "^3.0.1"
   }
 }
