--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/react-redux": "^6.0.6",
-    "typescript": "2.9.2"
+    "typescript": "^3.0.1"
   }
 }
