--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/react-redux": "^6.0.6",
+    "@types/react-router-dom": "^4.3.0",
     "typescript": "^3.0.1"
   }
 }
