--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.16.0",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
+    "@types/react-dom": "^16.0.7",
     "typescript": "^3.0.1"
   }
 }
