--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,12 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "react": "^16.4.0",
-    "react-admin": "^2.2.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-custom-scrollbars": "latest",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
-    "react-transition-group": "^2.4.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
@@ -38,6 +38,9 @@
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.5.8",
     "@types/react": "^16.4.9",
+    "@types/react-addons-css-transition-group": "^15.0.5",
+    "@types/react-transition-group": "^2.0.13",
+    "@types/react-custom-scrollbars": "^4.0.5",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
