--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "vannyy01",
   "license": "ISC",
   "dependencies": {
+    "@types/react-addons-css-transition-group": "^15.0.5",
     "axios": "^0.18.0",
     "concurrently": "^3.6.0",
     "cookie-session": "^2.0.0-beta.3",
@@ -26,7 +27,8 @@
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "save-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
