--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/react-addons-css-transition-group": "^15.0.5",
+    "@types/react-custom-scrollbars": "^4.0.5",
     "axios": "^0.18.0",
     "concurrently": "^3.6.0",
     "cookie-session": "^2.0.0-beta.3",
