--- a/client/package.json
+++ b/client/package.json
@@ -11,19 +11,19 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^1.4.3",
-    "@material-ui/icons": "^1.1.0",
-    "bootstrap": "^4.1.3",
+    "@material-ui/core": "^4.0.0-beta.1",
+    "@material-ui/icons": "^4.0.0-beta.0",
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
-    "lodash": "^4.17.10",
-    "react": "^16.4.0",
+    "lodash": "^4.17.11",
+    "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
     "react-custom-scrollbars": "latest",
-    "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
+    "react-dom": "^16.8.6",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -33,17 +33,17 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.6",
-    "@types/jest": "^23.3.1",
-    "@types/lodash": "^4.14.116",
-    "@types/node": "^10.5.8",
-    "@types/react": "^16.4.9",
+    "@types/classnames": "^2.2.7",
+    "@types/jest": "^23.3.14",
+    "@types/lodash": "^4.14.123",
+    "@types/node": "^10.14.6",
+    "@types/react": "^16.8.16",
     "@types/react-addons-css-transition-group": "^15.0.5",
-    "@types/react-transition-group": "^2.0.13",
     "@types/react-custom-scrollbars": "^4.0.5",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-redux": "^6.0.6",
-    "@types/react-router-dom": "^4.3.0",
-    "typescript": "^3.0.1"
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^6.0.14",
+    "@types/react-router-dom": "^4.3.2",
+    "@types/react-transition-group": "^2.9.1",
+    "typescript": "^3.4.5"
   }
 }
