--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "mongoose": "^5.5.5",
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0",
-    "passport-google-oauth20": "^1.0.0",
-    "save-dev": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
