--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^4.0.0-beta.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.0.0-beta.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
