--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "vannyy01",
   "license": "ISC",
   "dependencies": {
+    "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.18.0",
     "concurrently": "^3.6.1",
     "cookie-session": "^2.0.0-beta.3",
@@ -26,7 +27,9 @@
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react-async-hook": "^3.6.2",
+    "use-constant": "^1.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
