--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/icons": "^4.0.0-beta.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
@@ -24,7 +25,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-draggable": "latest"
   },
   "scripts": {
     "start": "react-scripts-ts start",
