--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -30,5 +30,12 @@
     "webpack",
     "jest",
     "src/setupTests.ts"
-  ]
+  ],
+  "watchOptions": {
+    "excludeDirectories": [
+      "**/node_modules",
+      "build",
+      "public"
+    ]
+  }
 }
