Working files uploading.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "outDir": "build/dist",
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "es6",
       "dom"
@@ -22,6 +22,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true
   },
+  "include": ["src", "public"],
   "exclude": [
     "node_modules",
     "build",
@@ -29,13 +30,16 @@
     "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts"
-  ],
-  "watchOptions": {
-    "excludeDirectories": [
-      "**/node_modules",
-      "build",
-      "public"
-    ]
-  }
+    "src/setupTests.ts",
+    "public/resources"
+  ]
+  //  "watchOptions": {
+  //    "watchFile": "useFsEvents",
+  //    "watchDirectory": "useFsEvents",
+  //    "excludeDirectories": [
+  //      "**/node_modules",
+  //      "build",
+  //      "public/**"
+  //    ]
+  //  }
 }
