--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "author": "vannyy01",
+  "license": "ISC",
   "main": "index.js",
   "engines": {
     "node": "^16.13.1",
@@ -14,17 +16,20 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "vannyy01",
-  "license": "ISC",
+  "nodemonConfig": {
+    "env": {
+      "__ENV__": "production"
+    }
+  },
   "dependencies": {
     "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.24.0",
-    "concurrently": "^3.6.1",
+    "concurrently": "^7.0.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mongoose": "^6.1.6",
-    "nodemon": "^1.19.0",
+    "nodemon": "^2.0.15",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
