--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "nodemonConfig": {
     "env": {
-      "__ENV__": "production"
+      "__ENV__": "development"
     }
   },
   "dependencies": {
