--- a/client/package.json
+++ b/client/package.json
@@ -14,21 +14,22 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.0.0-beta.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "http-proxy-middleware": "^2.0.3",
     "awesome-debounce-promise": "^2.1.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "react": "^17.0.2",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-custom-scrollbars": "latest",
+    "react-transition-group": "^4.4.2",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-draggable": "latest",
-    "react-redux": "^5.1.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts-ts": "2.16.0",
-    "redux": "^4.0.1",
+    "react-scripts-ts": "^3.1.0",
+    "redux": "^4.1.2",
     "redux-thunk": "^2.3.0",
     "use-constant": "^1.1.0"
   },
@@ -44,12 +45,11 @@
     "@types/lodash": "^4.14.123",
     "@types/node": "^10.14.6",
     "@types/react": "^17.0.39",
-    "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-custom-scrollbars": "^4.0.5",
     "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^6.0.14",
+    "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.1.6",
-    "@types/react-transition-group": "^2.9.1",
+    "@types/react-transition-group": "^4.4.4",
     "typescript": "^4.5.4"
   }
 }
