Added Filters in the GridView

--- a/client/package.json
+++ b/client/package.json
@@ -14,21 +14,22 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.0.0-beta.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "http-proxy-middleware": "^2.0.3",
     "awesome-debounce-promise": "^2.1.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "http-proxy-middleware": "^2.0.3",
     "lodash": "^4.17.11",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "react": "^17.0.2",
     "react-custom-scrollbars": "latest",
-    "react-transition-group": "^4.4.2",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-draggable": "latest",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts-ts": "^3.1.0",
+    "react-select": "^5.3.2",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.3.0",
     "use-constant": "^1.1.0"
