Added connection between the filters and the URL search params.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,6 +8,7 @@
       "es6",
       "dom"
     ],
+    "esModuleInterop": true,
     "sourceMap": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
