--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "awesome-debounce-promise": "^2.1.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "clsx": "^1.1.1",
     "http-proxy-middleware": "^2.0.3",
     "lodash": "^4.17.11",
     "material-ui-chip-input": "^2.0.0-beta.2",
@@ -44,7 +45,7 @@
     "@types/classnames": "^2.2.7",
     "@types/jest": "^23.3.14",
     "@types/lodash": "^4.14.123",
-    "@types/node": "^10.14.6",
+    "@types/node": "^18.0.0",
     "@types/react": "^17.0.39",
     "@types/react-custom-scrollbars": "^4.0.5",
     "@types/react-dom": "^17.0.11",
