--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "concurrently": "^7.0.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.18.1",
+    "express-query-boolean": "^2.0.0",
     "lodash": "^4.17.11",
     "mongoose": "^6.1.6",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "react-async-hook": "^3.6.2",
-    "use-constant": "^1.0.0",
-    "multer": "^1.4.4"
+    "use-constant": "^1.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
