--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/auth/google": {
-      "target": "http://localhost:5000"
-    },
-    "/api/*": {
-      "target": "http://localhost:5000"
-    }
-  },
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.0.0-beta.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -18,17 +12,20 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "he": "^1.2.0",
     "http-proxy-middleware": "^2.0.3",
     "lodash": "^4.17.11",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "react": "^17.0.2",
-    "react-custom-scrollbars": "latest",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-draggable": "latest",
+    "react-image-gallery": "^1.2.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts-ts": "^3.1.0",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
@@ -37,23 +34,38 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
-    "@types/jest": "^23.3.14",
+    "@types/he": "^1.1.2",
+    "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.123",
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.39",
     "@types/react-custom-scrollbars": "^4.0.5",
     "@types/react-dom": "^17.0.11",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-transition-group": "^4.4.4",
     "@types/uuid": "^8.3.4",
-    "typescript": "^4.5.4"
+    "sass": "^1.54.0",
+    "typescript": "4.7.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
