--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "engines": {
     "node": "^16.4.0",
-    "npm": "^8.1.2"
+    "npm": "^7.8.1"
   },
   "scripts": {
     "start": "node index.js",
@@ -46,6 +46,6 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^6.0.14",
     "@types/react-router-dom": "^4.3.2",
-    "typescript": "^4.5.4"
+    "typescript": "4.7.4"
   }
 }
