--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@formkit/auto-animate": "^1.0.0-beta.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.0.0-beta.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/x-date-pickers": "^5.0.0-beta.5",
     "awesome-debounce-promise": "^2.1.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
@@ -16,6 +19,9 @@
     "http-proxy-middleware": "^2.0.3",
     "lodash": "^4.17.11",
     "material-ui-chip-input": "^2.0.0-beta.2",
+    "material-ui-phone-number": "^3.0.0",
+    "moment": "^2.29.4",
+    "mui-tel-input": "^1.4.1",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.5.0",
