--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "concurrently": "^7.0.0",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.18.1",
