--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-draggable": "latest",
+    "react-google-button": "^0.7.2",
     "react-image-gallery": "^1.2.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
