--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "react-async-hook": "^3.6.2",
     "use-constant": "^1.0.0"
   },
