--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,8 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.3.0",
     "use-constant": "^1.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@react-buddy/ide-toolbox": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
